# django-celery

./: docker-compose.yml  pyproject.toml  requirements.txt
app/: consumers.py  forms.py  routing.py  tasks.py  urls.py  utils.py  views.py
app/templates/: form.html  form_ws.html
compose/local/django/: Dockerfile  entrypoint
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
core/: asgi.py  celery.py  settings.py  urls.py
