[tool.poetry]
name = "django-celery"
version = "0.1.0"
description = ""
authors = ["alex.lin"]
readme = "README.md"

[tool.poetry.dependencies]
celery = "5.3.6"
django = "5.0"
drf-spectacular = "^0.28.0"
flower = "2.0.1"
psycopg2-binary = "2.9.9"
python = "^3.12"
redis = "5.0.1"
requests = "^2.32.3"
watchfiles = "0.21.0"
channels = "4.0.0"
channels-redis = "4.1.0"
daphne = "4.0.0"
django-celery-beat = "2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
